# octave

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.ps1  build-sidecar.sh
src/: App.tsx  fonts.css  index.css  test-setup.ts
src-python/: .gitignore  ai.py  db.py  discovery.py  genre.py  main.py  ranker.py  rapidapi_client.py  requirements-dev.txt  requirements.txt  similarity.py  spotify_client.py
src-python/routers/: ai_router.py  auth.py  discovery.py  export.py  insights.py  playlists.py  refine.py  search.py  settings_api.py  storage.py  tracks.py
src-python/tests/: conftest.py  test_ai.py  test_audio_features.py  test_auth.py  test_discovery.py  test_export.py  test_genre.py  test_genre_enrichment.py  test_health.py  test_insights.py  test_integration.py  test_playlists.py  test_ranker.py  test_rapidapi_client.py  test_refine.py  test_search.py  test_settings_api.py  test_similarity.py  test_storage.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_recently_used_index.sql  003_interaction_log_index.sql  004_track_genres.sql  005_discovery_sessions.sql  006_ai_config.sql  007_audio_features_source.sql
src-tauri/src/: auth.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_cmd.rs  api.rs  discovery.rs  mod.rs
src/charts/: DonutChart.tsx  FlowChart.tsx  (+2 more)
(+42 files in other folders)
